Fixing horizontal scroll bar on tablet

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -428,7 +428,7 @@ footer{
 .title{font-weight: bold;}
  /* Tablet*/
  @media only screen and (min-width: 768px) and (max-width: 991px){
-    
+
     .accomodationandpopular {
         flex-direction:column;
         align-items: center;
@@ -451,12 +451,13 @@ footer{
         flex-direction: row;
         flex-wrap: wrap;
         height: auto;
+        width: 95%;
     }
 
     footer{
         flex-direction: row;
         justify-content: space-around;
-        width: 100%;
+        width: 95%;
         padding: 15px;
     }
  }
